CSS fix: right-align form labels in interactive demos
The labels were already placed flush with the right side, as far as the
flexbox layout goes. However, the text inside them was not right-aligned
before.

--- a/assets/css/blog.scss
+++ b/assets/css/blog.scss
@@ -181,6 +181,7 @@ figure > canvas,
         grid-colum: 1 / 2;
         justify-self: end;
         align-self: center;
+        text-align: right;
 
         font-variant: small-caps;
       }
